feri halka change

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 		<p>going on in say what? her! what up?</p>
 		Are you going to do it in here/??
 		anybody here?
+		feri halka edit handeko
+
 	</body>
 </html>
